tests/testdata/negative/struct_undef_field.go
package main
type Box struct {
  w int;
}
func main() {
  b := Box{w: 5};
  fmt.Println(b.h);
}
